Add support for authors

--- a/source/blog/2012-01-01-dear-hume.html.md
+++ b/source/blog/2012-01-01-dear-hume.html.md
@@ -1,5 +1,6 @@
 ---
 title: Dear Hume
+author: Hunter Thompson
 ---
 
 You ask advice: ah, what a very human and very dangerous thing to do! For to give advice to a man who asks what to do with his life implies something very close to egomania. To presume to point a man to the right and ultimate goal -- to point with a trembling finger in the **right** direction is something only a fool would take upon himself.
